@@ -105,6 +105,7 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
         if (!isOpened) {
             isOpened = true;
             this.receiptType = receiptType;
+            
             getPrinter().openReceipt(receiptType);
             getPrinter().waitForPrinting();
         }
@@ -261,7 +262,8 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
                     }
                 }
                 printReceiptItems();
-                if (isDiscountAffectTotal()) {
+                if (getParams().subAdjustmentOrder == PrinterConst.ADJUSTMENT_ORDER_RECEND)
+                {
                     for (int i = 0; i < discounts.size(); i++) {
                         printTotalDiscount(discounts.get(i));
                     }
@@ -882,6 +884,9 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
         item.setTax3(PrinterConst.SMFPTR_TAX_NOTAX);
         item.setTax4(PrinterConst.SMFPTR_TAX_NOTAX);
         item.setText(text);
+        if (getParams().subAdjustmentOrder == PrinterConst.ADJUSTMENT_ORDER_CORRECT){
+            items.add(item);
+        }
         discounts.add(item);
         addTotal(-amount);
     }
