@@ -171,7 +171,7 @@
         <prop name="ZeroPriceFilterTime2" type="String" value="16:00"/>
         <prop name="ZeroPriceFilterErrorText" type="String" value="Продажа спиртного запрещена"/>
         <!-- create Z-report in XML format -->
-        <prop name="XmlZReportEnabled" type="String" value="0"/>
+        <prop name="XmlZReportEnabled" type="String" value="1"/>
         <!-- Add day number to Z report filename - ZReport_0001.xml -->
         <prop name="ZReportDayNumber" type="String" value="1"/>
         <!-- XML Z-report file name -->
@@ -278,13 +278,14 @@
         <prop name="textReportFileName" type="String" value="archive.txt"/>
         <!-- Text report empty lines enabled -->
         <prop name="textReportEmptyLinesEnabled" type="String" value="0"/>
-		<!-- X5 receipt template -->
+		<!-- Receipt template -->
 		<prop name="ReceiptTemplateEnabled" type="String" value="0"/>
 		<prop name="FieldSeparator" type="String" value="\\n"/>
 		<prop name="ItemTableHeader" type="String" value=" №                  Цена со  Кол-\nпп  Цена     Скидка скидкой  во    ИТОГО\n"/>
 		<prop name="ItemRowFormat" type="String" value="%3cPOS% %38lTITLE%\n    %8lPRICE% %6lDISCOUNT% %8lSUM%*%3QUAN%%=$10TOTAL_TAX%  "/>
-		
 		<prop name="nonFiscalHeaderEnabled" type="String" value="1"/>
+		<!-- Subtotal adjustment order, 0 - correct, 1 - at receipt end -->
+		<prop name="subAdjustmentOrder" type="String" value="1"/>
     </JposEntry> 
     <JposEntry logicalName="ShtrihCashDrawer">
         <creation factoryClass="com.shtrih.jpos.ShtrihJposServiceInstanceFactory" serviceClass="com.shtrih.jpos.cashdrawer.CashDrawerImpl"/>
