@@ -6,6 +6,13 @@
 
 ********************************************************************************
 
+  March 2 2017, 12:00
+  deviceServiceVersion = 1013386
+	
+  [-] Fixed error with cash registers 185..188
+  
+********************************************************************************
+
   March 1 2017, 20:00
   deviceServiceVersion = 1013385
 	
